--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -36,7 +39,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.1.11",
     "vite": "^6.0.5"
   }
 }
